--- a/octgnFX/Octgn/packages.config
+++ b/octgnFX/Octgn/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="agsXMPP" version="1.1.1.0" targetFramework="net40" />
+  <package id="AvalonDock" version="2.0.1618" targetFramework="net40" />
+  <package id="AvalonEdit" version="4.2.0.8783" targetFramework="net40" />
   <package id="IronPython" version="2.7.3" targetFramework="net40" />
 </packages>
