--- a/octgnFX/Octgn.Core/packages.config
+++ b/octgnFX/Octgn.Core/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
   <package id="log4net" version="2.0.2" targetFramework="net40" />
   <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net40" />
+  <package id="MvvmLightLibs" version="4.2.30.0" targetFramework="net40" />
   <package id="NuGet.Core" version="2.7.2" targetFramework="net40" />
   <package id="System.IO.Abstractions" version="1.4.0.69" targetFramework="net40" />
 </packages>
