--- a/octgnFX/Octgn/Octgn.csproj
+++ b/octgnFX/Octgn/Octgn.csproj
@@ -415,6 +415,7 @@
     <Compile Include="Play\Gui\NoteControl.xaml.cs">
       <DependentUpon>NoteControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Play\Messages\ChatGameMessage.cs" />
     <Compile Include="Play\PlayDispatcher.cs" />
     <Compile Include="Play\PlayDispatcherAction.cs" />
     <Compile Include="Play\State\GameSaveState.cs" />
